[package]
name = "serde_macros"
version = "0.8.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to auto-generate implementations for the serde framework"
repository = "https://github.com/serde-rs/serde"
documentation = "https://github.com/serde-rs/serde"
keywords = ["serde", "serialization"]
include = ["Cargo.toml", "src/**/*.rs"]
build = "build.rs"

[lib]
name = "serde_macros"
plugin = true

[features]
unstable-testing = [
    "clippy",
    "skeptic",
    "serde_json",
    "serde/unstable-testing",
    "serde_codegen/unstable-testing"
]

[build-dependencies]
skeptic = { version = "^0.6.0", optional = true }

[dependencies]
clippy = { version = "^0.*", optional = true }
serde_codegen = { version = "=0.8.1", default-features = false, features = ["unstable"], path = "../serde_codegen" }
skeptic = { version = "^0.6.0", optional = true }
serde_json = { version = "0.8.0", optional = true }

[dev-dependencies]
clippy = "^0.*"
compiletest_rs = "^0.2.0"
fnv = "1.0"
rustc-serialize = "^0.3.16"
serde = { version = "0.8.0", path = "../serde" }
serde_test = { version = "0.8.0", path = "../serde_test" }

[[test]]
name = "test"
path = "tests/test.rs"

[[test]]
name = "skeptic"
path = "tests/skeptic.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
