[package]
name = "serde_test"
version = "1.0.123" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Token De/Serializer for testing De/Serialize implementations"
homepage = "https://serde.rs"
repository = "https://github.com/serde-rs/serde"
documentation = "https://docs.serde.rs/serde_test/"
keywords = ["serde", "serialization"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
serde = { version = "1.0.60" }
serde_state = { version = "0.4.1", path = "../serde_state" }

[dev-dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = { version = "1.0" }
serde_derive_state = { version = "0.4.3", path = "../serde_derive" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
