[package]
name = "serde_tests"
version = "0.6.3"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic serialization/deserialization framework"
repository = "https://github.com/serde-rs/serde"
documentation = "http://serde-rs.github.io/serde/serde"
readme = "README.md"
keywords = ["serialization"]
build = "build.rs"

[features]
nightly-testing = ["clippy", "serde/nightly-testing", "serde_codegen/nightly-testing"]

[build-dependencies]
syntex = { version = "^0.28.0" }
syntex_syntax = { version = "^0.28.0" }
serde_codegen = { version = "^0.6.12", path = "../serde_codegen", features = ["with-syntex"] }

[dev-dependencies]
num = "^0.1.26"
rustc-serialize = "^0.3.16"
serde = { version = "*", path = "../serde", features = ["num-impls"] }
syntex = "^0.28.0"

[dependencies]
clippy = { version = "^0.0.41", optional = true }

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
