[package]
name = "serde_testing"
version = "0.7.12"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic serialization/deserialization framework"
repository = "https://github.com/serde-rs/serde"
documentation = "http://serde-rs.github.io/serde/serde"
readme = "README.md"
keywords = ["serialization"]
build = "build.rs"

[features]
nightly-testing = ["clippy", "serde/nightly-testing", "serde_codegen/nightly-testing"]

[build-dependencies]
serde_codegen = { version = "*", path = "../serde_codegen", features = ["with-syntex"] }

[dev-dependencies]
fnv = "1.0"
rustc-serialize = "^0.3.16"
serde = { version = "*", path = "../serde" }
serde_test = { version = "*", path = "../serde_test" }

[dependencies]
clippy = { version = "^0.*", optional = true }

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
