[package]
name = "serde_testing"
version = "0.9.0-rc3"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic serialization/deserialization framework"
homepage = "https://serde.rs"
repository = "https://github.com/serde-rs/serde"
documentation = "https://docs.serde.rs/serde/"
readme = "README.md"
keywords = ["serialization"]
build = "build.rs"
publish = false

[features]
unstable-testing = ["clippy", "serde/unstable-testing", "serde_codegen/unstable-testing"]

[build-dependencies]
serde_codegen = { path = "../serde_codegen", features = ["with-syntex"] }

[dev-dependencies]
fnv = "1.0"
rustc-serialize = "^0.3.16"
serde = { path = "../serde" }
serde_test = { path = "../serde_test" }

[dependencies]
clippy = { version = "^0.*", optional = true }

[[test]]
name = "test"
path = "tests/test.rs"
