[package]
name = "serde_testing"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic serialization/deserialization framework"
homepage = "https://serde.rs"
repository = "https://github.com/serde-rs/serde"
documentation = "https://docs.serde.rs/serde/"
readme = "README.md"
keywords = ["serialization"]
publish = false

[features]
unstable-testing = ["clippy", "serde/unstable-testing"]

[dev-dependencies]
fnv = "1.0"
rustc-serialize = "0.3.16"
serde = { path = "../serde" }
serde_test = { path = "../serde_test" }
serde_derive = { path = "../serde_derive" }

[dependencies]
clippy = { version = "0.*", optional = true }

[[test]]
name = "test"
path = "tests/test.rs"
