[package]
name = "serde-syntex-example"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "^0.8.0", optional = true }
syntex = "^0.35.0"

[dependencies]
serde = "^0.8.0"
serde_json = "^0.8.0"
serde_macros = { version = "^0.8.0", optional = true }
