[package]
name = "serde-syntex-example"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "^0.7.13", optional = true }

[dependencies]
serde = "^0.7.13"
serde_json = "^0.7.0"
serde_macros = { version = "^0.7.13", optional = true }
