[package]
name = "serde_derive-x86_64-unknown-linux-gnu"
version = "1.0.171-alpha.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["no-std", "no-std::no-alloc"]
description = "Precompiled implementation of #[derive(Serialize, Deserialize)]"
documentation = "https://serde.rs/derive.html"
edition = "2015"
homepage = "https://serde.rs"
include = ["serde_derive", "src"]
keywords = ["serde", "serialization", "no_std", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/serde"

[lib]
name = "serde_derive"
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
